[package]
name = "rust-lipuma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version = "0.7.0", features = ["im", "svg", "image"]}
dyn-clonable = "0.9.0"
dyn-clone = "1.0.9"
noise = "0.8.1"
rand = "0.8.5"
