[package]
name = "rust-lipuma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version = "0.7.0", features = ["im", "svg", "image"]}
rand = "0.8.5"
trait_enum = "0.5.0"
druid-enums = { git = "https://github.com/finnerale/druid-enums" }
log = "0.4.17"

[profile.release]
debug = 1

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "noise_benchmark"
harness = false
